refactor to use workspaces, add Matrix struct with indexing support, add proc macro to generate Matrix instances

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[package]
-name = "stripe_matrix"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
+[workspace]
+members = ["matrix", "matrix_macros"]
+resolver = "2"
