add parallel implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["matrix", "matrix_macros", "sequential"]
+members = ["matrix", "matrix_macros", "parallel", "sequential"]
 resolver = "2"
